# mxgsDRM2

./: CMakeLists.txt  GNUmakefile  aces.gdml  asim.gdml  bgo.gdml  bgoSingle.gdml  codedMask.gdml  columbus.gdml  czt.gdml  instrument.gdml  makeCM.py  makePBS.py  mmia.gdml  mri.py  mxgs.gdml  mxgsDRM.cc  plotData.r  procDRM.r  runsims.py  test.gdml  vis.mac
cmake/: FindGSL.cmake
include/: BGOSD.hh  CZTSD.hh  DetectorConstruction.hh  EventInfo.hh  HitRecorder.hh  LayerSD.hh  PrimaryGeneratorAction.hh  SamplingGeometry.hh
issgdml/: C1I0.gdml  C1I0_spheres.gdml  C1I1.gdml  C1I1_spheres.gdml  C1I2.gdml  C1I2_spheres.gdml  C2I0.gdml  C2I0_spheres.gdml  C2I1.gdml  C2I1_spheres.gdml  C2I2.gdml  C2I2_spheres.gdml  C3I0.gdml  C3I0_spheres.gdml  C3I1.gdml  C3I1_spheres.gdml  C3I2.gdml  C3I2_spheres.gdml
makePBS/: makePBS.py
notes/: docs.org  notes.otl
src/: BGOSD.cc  CZTSD.cc  DetectorConstruction.cc  LayerSD.cc  PrimaryGeneratorAction.cc  SamplingGeometry.cc
